# Movie-Info-Telegram-Bot

./: .gitignore  main.py  pyproject.toml  requirements.txt  scrapy_bot.py
