[tool.poetry]
name = "movie-info-telegram-bot"
version = "0.1.0"
description = "A telegram Bot made using python which scrapes IMDb website and has the following functionalities;1.Replies to a movie name with genre and rating of the movie;2. Replies to a genre with a list of top movies and tv shows belonging to that genre"
authors = ["sadatyussuf <tommyleespartan0@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_info_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "20.0a0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
